# enforcement-service

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GETTING_STARTED.md  PROJECT_SUMMARY.md  README.md  SYSTEM_DIAGRAM.txt  TEST_SCENARIOS.md  demo.sh  record.sh  run.sh
examples/: basic_usage.rs  build_demo_wasms.rs  freeze_policy.rs  openai_analyzer.rs  run_workload.rs  two_modes_demo.rs
policies/: README.md  demo-manual.yaml  example.yaml  frozen.yaml  production.yaml
src/: analyzer.rs  api.rs  config.rs  enforcer.rs  error.rs  lib.rs  main.rs  service.rs
tests/: integration.rs
