[package]
name = "hal-enforcement-service"
version = "0.1.0"
edition = "2021"
authors = ["ELASTIC Consortium"]
description = "Policy-based enforcement service for ELASTIC TEE HAL access control"
license = "MIT"

[[bin]]
name = "hal-enforcer"
path = "src/main.rs"

[dependencies]
# Core HAL dependency
elastic-tee-hal = { path = ".." }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
colored = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits (used by LlmAnalyzer)
async-trait = "0.1"

# HTTP server (for API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Time and IDs
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Optional: real LLM-backed analyser (OpenAI Chat Completions).
# Enable with `--features openai`.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
wasmparser = { version = "0.219", optional = true }

[features]
default = []
openai = ["dep:reqwest", "dep:wasmparser"]

[dev-dependencies]
tempfile = "3.0"
wat = "1.0"
